src/helloParser.java
// Generated from hello.g4 by ANTLR 4.10.1

	import ast.*;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class helloParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.10.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, T__20=21, T__21=22, T__22=23, T__23=24, 
		T__24=25, T__25=26, T__26=27, T__27=28, T__28=29, T__29=30, T__30=31, 
		T__31=32, T__32=33, T__33=34, T__34=35, T__35=36, T__36=37, T__37=38, 
		T__38=39, T__39=40, T__40=41, T__41=42, T__42=43, T__43=44, T__44=45, 
		T__45=46, T__46=47, T__47=48, T__48=49, T__49=50, LET=51, LET_STAR=52, 
		FILTER=53, LPARAN=54, RPARAN=55, BOOLEAN=56, DISPLAY=57, DOT=58, AND=59, 
		OR=60, NOT=61, NAND=62, XOR=63, NOR=64, STRING=65, NUMBER=66, ADD=67, 
		SUB=68, MUL=69, DIV=70, ABS=71, QUOTIENT=72, REMAINDER=73, MODULO=74, 
		EQ=75, EQUAL=76, LT=77, GT=78, LE=79, GE=80, WS=81, COMMENT=82, ID=83;
	public static final int
		RULE_program = 0, RULE_srcexpression = 1, RULE_expression = 2, RULE_print_expression = 3, 
		RULE_exp = 4, RULE_statementList = 5, RULE_relational_expression = 6, 
		RULE_assignment_expression = 7, RULE_define_expression = 8, RULE_list_expression = 9, 
		RULE_list_contents = 10, RULE_vector_expression = 11, RULE_vector_contents = 12, 
		RULE_set_expression = 13, RULE_set_contents = 14, RULE_dict_expression = 15, 
		RULE_dictcommapair = 16, RULE_pair = 17, RULE_value = 18, RULE_lambda_expression = 19, 
		RULE_id_list = 20, RULE_filter_expression = 21, RULE_tolambda = 22, RULE_list_exp = 23, 
		RULE_function_definition = 24, RULE_ifExpression = 25, RULE_macroexp = 26, 
		RULE_syntax_rules = 27, RULE_syntax_rule = 28, RULE_do_expression = 29, 
		RULE_condExpression = 30, RULE_condClauses = 31, RULE_condClause = 32, 
		RULE_caseExpression = 33, RULE_caseClauses = 34, RULE_caseClause = 35, 
		RULE_operator = 36, RULE_atom = 37, RULE_id_expression = 38, RULE_datum = 39, 
		RULE_id = 40, RULE_string = 41, RULE_number = 42, RULE_keyword = 43;
	private static String[] makeRuleNames() {
		return new String[] {
			"program", "srcexpression", "expression", "print_expression", "exp", 
			"statementList", "relational_expression", "assignment_expression", "define_expression", 
			"list_expression", "list_contents", "vector_expression", "vector_contents", 
			"set_expression", "set_contents", "dict_expression", "dictcommapair", 
			"pair", "value", "lambda_expression", "id_list", "filter_expression", 
			"tolambda", "list_exp", "function_definition", "ifExpression", "macroexp", 
			"syntax_rules", "syntax_rule", "do_expression", "condExpression", "condClauses", 
			"condClause", "caseExpression", "caseClauses", "caseClause", "operator", 
			"atom", "id_expression", "datum", "id", "string", "number", "keyword"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'set!'", "'define'", "'list'", "'vector'", "'make-set'", "'lambda'", 
			"'if'", "'define-syntax'", "'syntax-rules'", "'do'", "'cond'", "'case'", 
			"'access'", "'begin'", "'cons-stream'", "'car'", "'cdr'", "'cons'", "'close-input-port'", 
			"'close-output-port'", "'change-directory'", "'declare'", "'define-integrable'", 
			"'define-structure'", "'delay'", "'delete-file'", "'directory-list'", 
			"'er-macro-transformer'", "'fluid-let'", "'file-exists?'", "'file-size'", 
			"'file-modify-seconds'", "'let*-syntax'", "'let-syntax'", "'letrec'", 
			"'local-declare'", "'non-hygienic-macrotransformer'", "'newline'", "'null?'", 
			"'named-lambda'", "'open-input-file'", "'open-output-file'", "'quote'", 
			"'quasiquote'", "'read-line'", "'read-char'", "'rename-file'", "'the-environment'", 
			"'write'", "'displayln'", "'let'", "'let*'", "'filter'", "'('", "')'", 
			null, "'display'", "'.'", "'and'", "'or'", "'not'", "'nand'", "'xor'", 
			"'nor'", null, null, "'+'", "'-'", "'*'", "'/'", "'abs'", "'quotient'", 
			"'remainder'", "'modulo'", "'='", "'equal?'", "'<'", "'>'", "'<='", "'>='"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, "LET", "LET_STAR", "FILTER", "LPARAN", "RPARAN", "BOOLEAN", 
			"DISPLAY", "DOT", "AND", "OR", "NOT", "NAND", "XOR", "NOR", "STRING", 
			"NUMBER", "ADD", "SUB", "MUL", "DIV", "ABS", "QUOTIENT", "REMAINDER", 
			"MODULO", "EQ", "EQUAL", "LT", "GT", "LE", "GE", "WS", "COMMENT", "ID"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "hello.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public helloParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class ProgramContext extends ParserRuleContext {
		public ASTNode node;
		public SrcexpressionContext srcexpression;
		public SrcexpressionContext srcexpression() {
			return getRuleContext(SrcexpressionContext.class,0);
		}
		public TerminalNode EOF() { return getToken(helloParser.EOF, 0); }
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof helloListener ) ((helloListener)listener).enterProgram(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof helloListener ) ((helloListener)listener).exitProgram(this);
		}
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(88);
			((ProgramContext)_localctx).srcexpression = srcexpression();
			setState(89);
			match(EOF);
			((ProgramContext)_localctx).node =  ((ProgramContext)_localctx).srcexpression.node;_localctx.node.print();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SrcexpressionContext extends ParserRuleContext {
		public ASTNode node;
		public ExpressionContext e1;
		public SrcexpressionContext s1;
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public SrcexpressionContext srcexpression() {
			return getRuleContext(SrcexpressionContext.class,0);
		}
		public SrcexpressionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_srcexpression; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof helloListener ) ((helloListener)listener).enterSrcexpression(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof helloListener ) ((helloListener)listener).exitSrcexpression(this);
		}
	}

	public final SrcexpressionContext srcexpression() throws RecognitionException {
		SrcexpressionContext _localctx = new SrcexpressionContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_srcexpression);
		try {
			setState(97);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__5:
			case T__8:
			case T__9:
			case T__12:
			case T__13:
			case T__14:
			case T__15:
			case T__16:
			case T__17:
			case T__18:
			case T__19:
			case T__20:
			case T__21:
			case T__22:
			case T__23:
			case T__24:
			case T__25:
			case T__26:
			case T__27:
			case T__28:
			case T__29:
			case T__30:
			case T__31:
			case T__32:
			case T__33:
			case T__34:
			case T__35:
			case T__36:
			case T__37:
			case T__38:
			case T__39:
			case T__40:
			case T__41:
			case T__42:
			case T__43:
			case T__44:
			case T__45:
			case T__46:
			case T__47:
			case T__48:
			case T__49:
			case LET:
			case LET_STAR:
			case LPARAN:
			case BOOLEAN:
			case OR:
			case STRING:
			case NUMBER:
			case ID:
				enterOuterAlt(_localctx, 1);
				{
				setState(92);
				((SrcexpressionContext)_localctx).e1 = expression();
				setState(93);
				((SrcexpressionContext)_localctx).s1 = srcexpression();
				((SrcexpressionContext)_localctx).node =  new SrcExpressionNode(((SrcexpressionContext)_localctx).e1.node, ((SrcexpressionContext)_localctx).s1.node);
				}
				break;
			case EOF:
			case RPARAN:
				enterOuterAlt(_localctx, 2);
				{
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ExpressionContext extends ParserRuleContext {
		public ASTNode node;
		public ExpContext e1;
		public IfExpressionContext e2;
		public CondExpressionContext e3;
		public CaseExpressionContext e4;
		public Define_expressionContext e5;
		public List_expressionContext e6;
		public Vector_expressionContext e7;
		public Set_expressionContext e8;
		public Dict_expressionContext e9;
		public Lambda_expressionContext e10;
		public Function_definitionContext e13;
		public Filter_expressionContext e14;
		public Do_expressionContext e15;
		public Relational_expressionContext e16;
		public Assignment_expressionContext e17;
		public AtomContext e18;
		public Print_expressionContext e19;
		public ExpContext exp() {
			return getRuleContext(ExpContext.class,0);
		}
		public IfExpressionContext ifExpression() {
			return getRuleContext(IfExpressionContext.class,0);
		}
		public CondExpressionContext condExpression() {
			return getRuleContext(CondExpressionContext.class,0);
		}
		public CaseExpressionContext caseExpression() {
			return getRuleContext(CaseExpressionContext.class,0);
		}
		public Define_expressionContext define_expression() {
			return getRuleContext(Define_expressionContext.class,0);
		}
		public List_expressionContext list_expression() {
			return getRuleContext(List_expressionContext.class,0);
		}
		public Vector_expressionContext vector_expression() {
			return getRuleContext(Vector_expressionContext.class,0);
		}
		public Set_expressionContext set_expression() {
			return getRuleContext(Set_expressionContext.class,0);
		}
		public Dict_expressionContext dict_expression() {
			return getRuleContext(Dict_expressionContext.class,0);
		}
		public Lambda_expressionContext lambda_expression() {
			return getRuleContext(Lambda_expressionContext.class,0);
		}
		public Function_definitionContext function_definition() {
			return getRuleContext(Function_definitionContext.class,0);
		}
		public Filter_expressionContext filter_expression() {
			return getRuleContext(Filter_expressionContext.class,0);
		}
		public Do_expressionContext do_expression() {
			return getRuleContext(Do_expressionContext.class,0);
		}
		public Relational_expressionContext relational_expression() {
			return getRuleContext(Relational_expressionContext.class,0);
		}
		public Assignment_expressionContext assignment_expression() {
			return getRuleContext(Assignment_expressionContext.class,0);
		}
		public AtomContext atom() {
			return getRuleContext(AtomContext.class,0);
		}
		public Print_expressionContext print_expression() {
			return getRuleContext(Print_expressionContext.class,0);
		}
		public ExpressionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_expression; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof helloListener ) ((helloListener)listener).enterExpression(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof helloListener ) ((helloListener)listener).exitExpression(this);
		}
	}

	public final ExpressionContext expression() throws RecognitionException {
		ExpressionContext _localctx = new ExpressionContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_expression);
		try {
			setState(150);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,1,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(99);
				((ExpressionContext)_localctx).e1 = exp();
				((ExpressionContext)_localctx).node =  ((ExpressionContext)_localctx).e1.node;
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(102);
				((ExpressionContext)_localctx).e2 = ifExpression();
				((ExpressionContext)_localctx).node =  ((ExpressionContext)_localctx).e2.node;
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(105);
				((ExpressionContext)_localctx).e3 = condExpression();
				((ExpressionContext)_localctx).node =  ((ExpressionContext)_localctx).e3.node;
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(108);
				((ExpressionContext)_localctx).e4 = caseExpression();
				((ExpressionContext)_localctx).node =  ((ExpressionContext)_localctx).e4.node;
				}
				break;
			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(111);
				((ExpressionContext)_localctx).e5 = define_expression();
				((ExpressionContext)_localctx).node =  ((ExpressionContext)_localctx).e5.node;
				}
				break;
			case 6:
				enterOuterAlt(_localctx, 6);
				{
				setState(114);
				((ExpressionContext)_localctx).e6 = list_expression();
				((ExpressionContext)_localctx).node =  ((ExpressionContext)_localctx).e6.node;
				}
				break;
			case 7:
				enterOuterAlt(_localctx, 7);
				{
				setState(117);
				((ExpressionContext)_localctx).e7 = vector_expression();
				((ExpressionContext)_localctx).node =  ((ExpressionContext)_localctx).e7.node;
				}
				break;
			case 8:
				enterOuterAlt(_localctx, 8);
				{
				setState(120);
				((ExpressionContext)_localctx).e8 = set_expression();
				((ExpressionContext)_localctx).node =  ((ExpressionContext)_localctx).e8.node;
				}
				break;
			case 9:
				enterOuterAlt(_localctx, 9);
				{
				setState(123);
				((ExpressionContext)_localctx).e9 = dict_expression();
				((ExpressionContext)_localctx).node =  ((ExpressionContext)_localctx).e9.node;
				}
				break;
			case 10:
				enterOuterAlt(_localctx, 10);
				{
				setState(126);
				((ExpressionContext)_localctx).e10 = lambda_expression();
				((ExpressionContext)_localctx).node =  ((ExpressionContext)_localctx).e10.node;
				}
				break;
			case 11:
				enterOuterAlt(_localctx, 11);
				{
				setState(129);
				((ExpressionContext)_localctx).e13 = function_definition();
				((ExpressionContext)_localctx).node =  ((ExpressionContext)_localctx).e13.node;
				}
				break;
			case 12:
				enterOuterAlt(_localctx, 12);
				{
				setState(132);
				((ExpressionContext)_localctx).e14 = filter_expression();
				((ExpressionContext)_localctx).node =  ((ExpressionContext)_localctx).e14.node;
				}
				break;
			case 13:
				enterOuterAlt(_localctx, 13);
				{
				setState(135);
				((ExpressionContext)_localctx).e15 = do_expression();
				((ExpressionContext)_localctx).node =  ((ExpressionContext)_localctx).e15.node;
				}
				break;
			case 14:
				enterOuterAlt(_localctx, 14);
				{
				setState(138);
				((ExpressionContext)_localctx).e16 = relational_expression();
				((ExpressionContext)_localctx).node =  ((ExpressionContext)_localctx).e16.node;
				}
				break;
			case 15:
				enterOuterAlt(_localctx, 15);
				{
				setState(141);
				((ExpressionContext)_localctx).e17 = assignment_expression();
				((ExpressionContext)_localctx).node =  ((ExpressionContext)_localctx).e17.node;
				}
				break;
			case 16:
				enterOuterAlt(_localctx, 16);
				{
				setState(144);
				((ExpressionContext)_localctx).e18 = atom();
				((ExpressionContext)_localctx).node =  ((ExpressionContext)_localctx).e18.node;
				}
				break;
			case 17:
				enterOuterAlt(_localctx, 17);
				{
				setState(147);
				((ExpressionContext)_localctx).e19 = print_expression();
				((ExpressionContext)_localctx).node =  ((ExpressionContext)_localctx).e19.node;
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Print_expressionContext extends ParserRuleContext {
		public ASTNode node;
		public ExpressionContext s1;
		public TerminalNode LPARAN() { return getToken(helloParser.LPARAN, 0); }
		public TerminalNode DISPLAY() { return getToken(helloParser.DISPLAY, 0); }
		public TerminalNode RPARAN() { return getToken(helloParser.RPARAN, 0); }
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public Print_expressionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_print_expression; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof helloListener ) ((helloListener)listener).enterPrint_expression(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof helloListener ) ((helloListener)listener).exitPrint_expression(this);
		}
	}

	public final Print_expressionContext print_expression() throws RecognitionException {
		Print_expressionContext _localctx = new Print_expressionContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_print_expression);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(152);
			match(LPARAN);
			setState(153);
			match(DISPLAY);
			setState(154);
			((Print_expressionContext)_localctx).s1 = expression();
			setState(155);
			match(RPARAN);
			((Print_expressionContext)_localctx).node =  new PrintExpressionNode(((Print_expressionContext)_localctx).s1.node);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ExpContext extends ParserRuleContext {
		public ASTNode node;
		public SrcexpressionContext e1;
		public TerminalNode LPARAN() { return getToken(helloParser.LPARAN, 0); }
		public TerminalNode RPARAN() { return getToken(helloParser.RPARAN, 0); }
		public SrcexpressionContext srcexpression() {
			return getRuleContext(SrcexpressionContext.class,0);
		}
		public ExpContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_exp; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof helloListener ) ((helloListener)listener).enterExp(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof helloListener ) ((helloListener)listener).exitExp(this);
		}
	}

	public final ExpContext exp() throws RecognitionException {
		ExpContext _localctx = new ExpContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_exp);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(158);
			match(LPARAN);
			setState(159);
			((ExpContext)_localctx).e1 = srcexpression();
			setState(160);
			match(RPARAN);
			((ExpContext)_localctx).node =  new ExpNode(((ExpContext)_localctx).e1.node);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StatementListContext extends ParserRuleContext {
		public ASTNode node;
		public ExpressionContext e1;
		public StatementListContext s1;
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public StatementListContext statementList() {
			return getRuleContext(StatementListContext.class,0);
		}
		public StatementListContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_statementList; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof helloListener ) ((helloListener)listener).enterStatementList(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof helloListener ) ((helloListener)listener).exitStatementList(this);
		}
	}
